{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 361,
  "lineage": "08c4ad9f-5e4e-f55e-d5ba-b42b81fa3a1f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-049b7bdb2b6ee683c",
            "domain": "vpc",
            "id": "eipalloc-65fe1840",
            "instance": "i-0312e89910dfc70e4",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-050539a56add4d738",
            "private_dns": "ip-172-30-0-174.eu-central-1.compute.internal",
            "private_ip": "172.30.0.174",
            "public_dns": "ec2-3-126-179-219.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.179.219",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.my-instance1",
            "aws_security_group.SecGroup",
            "aws_subnet.aws-subnet-publicA",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07e353a3b3293d8e8",
            "domain": "vpc",
            "id": "eipalloc-9bf315be",
            "instance": "i-00f564f149aa73694",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0eb430f0964021acf",
            "private_dns": "ip-172-30-1-59.eu-central-1.compute.internal",
            "private_ip": "172.30.1.59",
            "public_dns": "ec2-18-198-191-144.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.198.191.144",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.my-instance2",
            "aws_security_group.SecGroup",
            "aws_subnet.aws-subnet-publicB",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b65a06ec09db85c",
            "arn": "arn:aws:ec2:eu-central-1:832226478902:instance/i-0312e89910dfc70e4",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0312e89910dfc70e4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-050539a56add4d738",
            "private_dns": "ip-172-30-0-174.eu-central-1.compute.internal",
            "private_ip": "172.30.0.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ca0e909a4065503",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0520926e51981e6df"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04981780753c1a4a5",
            "tags": {
              "Name": "VM-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0520926e51981e6df"
            ]
          },
          "dependencies": [
            "aws_security_group.SecGroup",
            "aws_subnet.aws-subnet-publicA",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b65a06ec09db85c",
            "arn": "arn:aws:ec2:eu-central-1:832226478902:instance/i-00f564f149aa73694",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f564f149aa73694",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb430f0964021acf",
            "private_dns": "ip-172-30-1-59.eu-central-1.compute.internal",
            "private_ip": "172.30.1.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c7debe34f376057",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0520926e51981e6df"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02abb4d9a6f0972c3",
            "tags": {
              "Name": "VM-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0520926e51981e6df"
            ]
          },
          "dependencies": [
            "aws_security_group.SecGroup",
            "aws_subnet.aws-subnet-publicB",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:832226478902:internet-gateway/igw-0d8e86aac438574c8",
            "id": "igw-0d8e86aac438574c8",
            "owner_id": "832226478902",
            "vpc_id": "vpc-0b17ee3ccac509adf"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "MyNLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:832226478902:loadbalancer/net/MyNLB/9744965956d597bc",
            "arn_suffix": "net/MyNLB/9744965956d597bc",
            "dns_name": "MyNLB-9744965956d597bc.elb.eu-central-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:832226478902:loadbalancer/net/MyNLB/9744965956d597bc",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "MyNLB",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02abb4d9a6f0972c3"
              },
              {
                "subnet_id": "subnet-04981780753c1a4a5"
              }
            ],
            "subnets": [
              "subnet-02abb4d9a6f0972c3",
              "subnet-04981780753c1a4a5"
            ],
            "vpc_id": "vpc-0b17ee3ccac509adf",
            "zone_id": "Z3F0SRJ5LGBH90"
          },
          "dependencies": [
            "aws_subnet.aws-subnet-publicA",
            "aws_subnet.aws-subnet-publicB",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:832226478902:listener/net/MyNLB/9744965956d597bc/ead04f80dc999870",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:832226478902:targetgroup/TargetVMs/d18ca812806e1536",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:832226478902:listener/net/MyNLB/9744965956d597bc/ead04f80dc999870",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:832226478902:loadbalancer/net/MyNLB/9744965956d597bc",
            "port": 23,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.MyNLB",
            "aws_lb_target_group.Target",
            "aws_subnet.aws-subnet-publicA",
            "aws_subnet.aws-subnet-publicB",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:832226478902:targetgroup/TargetVMs/d18ca812806e1536",
            "arn_suffix": "targetgroup/TargetVMs/d18ca812806e1536",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:832226478902:targetgroup/TargetVMs/d18ca812806e1536",
            "lambda_multi_value_headers_enabled": false,
            "name": "TargetVMs",
            "port": 23,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b17ee3ccac509adf"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:832226478902:targetgroup/TargetVMs/d18ca812806e1536-20210104043037822400000001",
            "port": 23,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:832226478902:targetgroup/TargetVMs/d18ca812806e1536",
            "target_id": "i-0312e89910dfc70e4"
          },
          "dependencies": [
            "aws_instance.my-instance1",
            "aws_lb_target_group.Target",
            "aws_security_group.SecGroup",
            "aws_subnet.aws-subnet-publicA",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:832226478902:targetgroup/TargetVMs/d18ca812806e1536-20210104043048011100000002",
            "port": 23,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:832226478902:targetgroup/TargetVMs/d18ca812806e1536",
            "target_id": "i-00f564f149aa73694"
          },
          "dependencies": [
            "aws_instance.my-instance2",
            "aws_lb_target_group.Target",
            "aws_security_group.SecGroup",
            "aws_subnet.aws-subnet-publicB",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:832226478902:security-group/sg-0520926e51981e6df",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0520926e51981e6df",
            "ingress": [],
            "name": "TCPGroup",
            "name_prefix": "",
            "owner_id": "832226478902",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b17ee3ccac509adf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-239434992",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0520926e51981e6df",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SecGroup",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet-publicA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:832226478902:subnet/subnet-04981780753c1a4a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.30.0.0/24",
            "id": "subnet-04981780753c1a4a5",
            "map_public_ip_on_launch": false,
            "owner_id": "832226478902",
            "tags": {
              "Name": "Subnet A"
            },
            "vpc_id": "vpc-0b17ee3ccac509adf"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet-publicB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:832226478902:subnet/subnet-02abb4d9a6f0972c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.30.1.0/24",
            "id": "subnet-02abb4d9a6f0972c3",
            "map_public_ip_on_launch": false,
            "owner_id": "832226478902",
            "tags": {
              "Name": "Subnet B"
            },
            "vpc_id": "vpc-0b17ee3ccac509adf"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:832226478902:vpc/vpc-0b17ee3ccac509adf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-0f191fe61d38e40de",
            "default_route_table_id": "rtb-0bbf5a510f96311ad",
            "default_security_group_id": "sg-0f4fb70d5512e17ca",
            "dhcp_options_id": "dopt-a2a51ec8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b17ee3ccac509adf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bbf5a510f96311ad",
            "owner_id": "832226478902",
            "tags": {
              "Description": "Custom VPC",
              "Name": "TF:VPC",
              "Owner": "k.vasiliev32@gmail.com"
            }
          }
        }
      ]
    }
  ]
}